force-app/main/default/objects/Invoice_CSV_Field_Mapping__mdt/Invoice_CSV_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type to define CSV field mappings for invoice export functionality. Maps CSV column headers to Salesforce field API names.</description>
    <label>Invoice CSV Field Mapping</label>
    <pluralLabel>Invoice CSV Field Mappings</pluralLabel>
</CustomObject>