force-app/main/default/objects/Invoice_CSV_Field_Mapping__mdt/fields/CSV_Column_Header__c.field-meta.xml
<CustomField>
    <fullName>CSV_Column_Header__c</fullName>
    <description>The header label that will appear in the CSV file for this field</description>
    <label>CSV Column Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>