force-app/main/default/objects/Invoice_CSV_Field_Mapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value to use if the field is empty or for static values</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>