force-app/main/default/objects/Invoice_CSV_Field_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The API name of the field from which to extract the value</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>