force-app/main/default/objects/Invoice_CSV_Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this field mapping is active and should be included in CSV export</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>