force-app/main/default/objects/Invoice_CSV_Field_Mapping__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The API name of the Salesforce object (e.g., Invoice__c, Invoice_Line_Item__c)</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>