force-app/main/default/objects/Invoice_CSV_Field_Mapping__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Order in which the column should appear in the CSV file</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>